# Distributional_Sensitivity_Engine

./: README.md  pyproject.toml
examples/: bsm_gaussian_blocks_demo.py  general_mc_lr_malliavin_demo.py  heston_mc_demo.py  local_vol_pde_demo.py
src/distributional_sensitivity_engine/: __init__.py  __main__.py  engine.py
